# CoNNexa

./: .editorconfig  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
docs/: CONNEXA_RAKIP_ANALIZ_RAPORU.md
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  alarm.rs  crypto.rs  events.rs  http.rs  import.rs  lib.rs  main.rs  metrics.rs  password_resolver.rs  plugins.rs  proxy.rs  rdp_launcher.rs  recording.rs  session.rs  sftp.rs  ssh.rs  state.rs  tunnel.rs  types.rs  vault.rs
src-tauri/src/commands/: ai_cmds.rs  conn.rs  misc_cmds.rs  mod.rs  remote_cmds.rs  session_cmds.rs  sftp_cmds.rs  vault_cmds.rs
src/assets/: main.css
src/bridge/: connexa.ts  global.d.ts
src/components/: AiAssistantDialog.vue  CommandPalette.vue  CrudDialog.vue  GroupDialog.vue  HostDialog.vue  HostListItem.vue  HostTreeNode.vue  HotkeyHelpDialog.vue  IdentityDialog.vue  MonitorPanel.vue  RdpPane.vue  SessionPane.vue  SftpPanel.vue  SideSheet.vue  SnippetDialog.vue  TerminalPane.vue  TunnelDialog.vue  VncPane.vue
src/composables/: hostActions.ts  keymap.ts  terminalThemes.ts  useAppHotkeys.ts  useAppLocale.ts  useAppTheme.ts  useResponsive.ts  useWorkbenchTheme.ts
src/i18n/: index.ts
src/main/: index.ts  ipc.ts
src/plugins/: defaults.ts  theme.ts  vuetify.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/shared/: types.ts
src/stores/: plugins.ts  recordings.ts  sessions.ts  settings.ts  teams.ts  tunnels.ts  ui.ts  vault.ts
src/views/: SettingsView.vue  SyncView.vue  TeamsView.vue  TunnelsView.vue  WorkspaceView.vue
(+64 files in other folders)
