[package]
name = "connexa"
version = "0.1.0"
description = "Connexa — SSH / RDP / VNC / Telnet Uzak Erişim Yöneticisi"
authors = ["Fahrettin Aksoy"]
license = "MIT"
edition = "2021"

[lib]
# `_lib` soneki Windows'ta bin adıyla çakışmayı önler.
name = "connexa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — tüm ağ/PTY/proxy işleri buradan.
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1"

# SSH: oturum shell'i, exec, SFTP, tünel port yönlendirme.
# (0.61: RUSTSEC-2026-0154/0153 düzeltmesi)
russh = "0.61"
russh-sftp = "2"

# Yerel terminal PTY.
portable-pty = "0.8"

# Serial konsol.
serialport = "4"

# WebSocket köprüsü (VNC / RDP proxy) + TLS (RDP RDCleanPath).
tokio-tungstenite = "0.24"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
x509-cert = { version = "0.2", features = ["pem"] }

# HTTP istemcisi (sync/cloud/team/ai) + SSE streaming.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Şifreleme: at-rest alan şifrelemesi (keychain + AES-GCM) ve
# sync/team payload (scrypt + AES-256-GCM, parola tabanlı, taşınabilir).
aes-gcm = "0.10"
scrypt = { version = "0.11", default-features = false }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"

# At-rest sırlar için OS anahtarlığı.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Kimlikler için UUID.
uuid = { version = "1", features = ["v4"] }

# mRemoteNG XML içe aktarma. (>=0.41: RUSTSEC-2026-0194/0195 düzeltmesi)
quick-xml = "0.41"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
